    trying, to support servers with high load.

o Protocols.HTTP.Query

  - Added unicode_data() method that will return the payload decoded
    according to the charset described in the Content-Type header.

  - Many fixes for bugs in asynchronous mode.

  - A query will not silently downgrade to http from https anymore if
    there is no crypto support.

  - Fixes for keep alive.

o Protocols.LDAP

  - Enabled support for paged queries.

  - Added more resilience to UTF-8 encode errors.
    Locale.Charset.DecodeError is thrown for UTF-8 decode exceptions.

  - Added a connection pool for connection reuse. It is used through
    get_connection() and return_connection().

  - Added some schema handling and use it to fix the UTF-8 conversion
    to only affect attributes that actually are UTF-8 encoded.

  - Added client.read(), client.read_attr(),
    client.get_root_dse_attr(), client.get_basedn(),
    client.get_scope(), client.get_attr_type_descr(),
    get_constant_name(), and a bunch of constants for various object
    oids, attributes, well-known object guids and other things.

  - Rewrote the search filter parser to handle LDAPv3 extensible
    matches. It now also throw errors on all syntactic errors (using a
    new FilterError object), instead of sending a partial filter to
    the server. It is also possible to compile filters separately
    through make_filter(), and there is a very simple cache for
    compiled filters through get_cached_filter().

  - Added ldap_encode_string(), ldap_decode_string(),
    encode_dn_value(), canonicalize_dn(), parse_ldap_url(),
    client.get_parsed_url(), and client.get_bound_dn().

  - Added client.result.fetch_all().

  - Added new flag field to client.search() to control various aspects
    of how results are returned: SEARCH_LOWER_ATTRS lowercases all
    attribute names. SEARCH_MULTIVAL_ARRAYS_ONLY uses arrays for
    attribute values only for attributes that might return more than